--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <div class="container">
         <div class="contents">
             <ul>
-                <li><a href="#"><span>// </span>now_playing("<span id="music_name">-------</span>")</a></li>
+                <li><a href="#"><span>// </span>now_playing("<span id="music_name">Shuffling..</span>")</a></li>
                 
                 <li>&nbsp;</li>
                 <li><a target="_blank" href="https://github.com/saphirepi"><span>// </span>github();</a></li>
-                <li><a href="#"><span>// </span>discord("X-49#3838");</a></li>
                 <li><a target="_blank" href="https://t.me/saphirepi"><span>// </span>telegram();</a></li>
+                <li><a href="#"><span>// </span>discord("X-49#2999");</a></li>
                 <li>&nbsp;</li>
                 <li>
                     <span class="uncommented">
@@ -38,7 +38,7 @@
         </canvas>
     </div>
     <center>
-        <span class="title">X-49 / SaphirePi.~ / Nefelit</span>
+        <span class="title">X-49</span>
     </center>
 </body>
 
